--- a/.gitignore
+++ b/.gitignore
@@ -9,14 +9,22 @@
 /coverage
 
 # production
-/build
 
-# misc
-.DS_Store
+.env
+.env.exmaple
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+/build
+
+# misc
+.DS_Store
+
+
+
+**/*.test.tsx
 
 npm-debug.log*
 yarn-debug.log*
