--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "baseUrl": "./src",
     "noImplicitAny": false
   },
-  "include": ["next-env.d.ts", "src", "../jest.config.ts"],
+  "include": ["next-env.d.ts", "src"],
   "exclude": [
     "node_modules",
     "./node_modules",
